Grease pencil to svg export incorrect line thickness in 3.5.1 #107810

Closed
opened 2023-05-10 14:28:23 +02:00 by Baglaridis-Platon · 3 comments

System Information
Operating system: Windows 10

Blender Version
Broken: 3.4.1, 3.5.1
Worked: 3.4

Tried exporting a grease pencil object as svg in blender 3.5.1 and ended up with a messy result. I tried to apply the modifiers and mess about with what little export settings there are and couldn't get the appropriate results. Then I discovered that grease pencil to svg works perfectly fine in an older version of blender I have installed.

**System Information** Operating system: Windows 10 **Blender Version** Broken: 3.4.1, 3.5.1 Worked: 3.4 Tried exporting a grease pencil object as svg in blender 3.5.1 and ended up with a messy result. I tried to apply the modifiers and mess about with what little export settings there are and couldn't get the appropriate results. Then I discovered that grease pencil to svg works perfectly fine in an older version of blender I have installed.
Baglaridis-Platon added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-05-10 14:28:24 +02:00
Iliya Katushenock added the
Interest
Grease Pencil
Interest
Pipeline, Assets & IO
labels 2023-05-10 14:29:18 +02:00
Member

Starting at at least 3.4.1 it's already broken. Will take a look.

Starting at at least 3.4.1 it's already broken. Will take a look.
YimingWu added
Module
Grease Pencil
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-05-10 15:11:30 +02:00
Member

Caused by 85a743e08bfcaa321c7f0e7ce cc @antoniov

Not sure why, is the ceilfgonna cause much trouble?

Caused by `85a743e08bfcaa321c7f0e7ce` cc @antoniov Not sure why, is the `ceilf`gonna cause much trouble?

The problem is only in SVG, but PDF looks right... I'm going to take a look.

The problem is only in SVG, but PDF looks right... I'm going to take a look.
Antonio Vazquez self-assigned this 2023-05-11 10:25:47 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-05-13 16:11:51 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107810
No description provided.