Fix #107810: SVG exported line thickness wrong

Due a limitation in the precission of the thickness
calculation, the result could be wrong.

As the code tried to use the real thickness, in some
cases this was wrong.

Related to old fix for #103061

Pull Request: https://projects.blender.org/blender/blender/pulls/107835